--- a/src/app/calendario-atendimento/calendario-atendimento.component.html
+++ b/src/app/calendario-atendimento/calendario-atendimento.component.html
@@ -1,7 +1,7 @@
 <app-dashboard></app-dashboard>
 
 <div class="container">
-    <h3 class="text-center mt-5">Calendário de Atendimento</h3>
+    <h3 class="text-center mt-5">Calendário de Agendamento</h3>
 
     <div class="borda-table mt-3">
         <p-table #dataView [value]="periodos" [columns]="colunasTabela" [responsive]="true" 
