--- a/src/app/pagina-inicial/pagina-inicial.component.html
+++ b/src/app/pagina-inicial/pagina-inicial.component.html
@@ -4,21 +4,21 @@
     <div>
         <button class="btn btn-success" [routerLink]="['/consultas-retornos']">
             <i class="fas fa-notes-medical fa-lg"></i>
-            Consultas/Retornos
+            Consultas & Retornos
         </button>
     </div>
 
     <div>
-        <button class="btn text-white mt-3 button-calendario" style="background-color: #e6663f;" [routerLink]="['/calendario-atendimento']">
+        <button class="btn text-white mt-3 button-calendario" style="background-color: #e6663f;" [routerLink]="['/calendario-agendamento']">
             <i class="far fa-calendar-check fa-lg"></i>
-            Calendário Atendimento
+            Calendário de Agendamento
         </button>
     </div>
 
     <div>
         <button class="btn text-white mt-3 button-horarios" style="background-color: #8d43e2;" [routerLink]="['/horario-atendimento']">
             <i class="fas fa-user-clock"></i>
-            Horários Atendimento
+            Horários de Atendimento
         </button>
     </div>
 
