--- a/src/app/parametros-atendimento-paciente/parametros-atendimento-paciente.component.html
+++ b/src/app/parametros-atendimento-paciente/parametros-atendimento-paciente.component.html
@@ -126,13 +126,13 @@
     </div>
 
     <div class="mt-5 text-center">
-        <button class="btn btn-warning px-5" [disabled]="editarParametros" (click)="editarParametros = true">
+        <button class="btn btn-warning text-white px-5" [disabled]="editarParametros" (click)="editarParametros = true">
             <i class="fas fa-pen"></i>
             Editar
         </button>
 
         <button *ngIf="editarParametros" class="btn btn-danger px-5 mx-4" (click)="cancelarAlteracao()">
-            <i class="fas fa-times"></i>
+            <i class="fas fa-times-circle"></i>
             Cancelar
         </button>
 
